syntax = "proto3";
package pryzm.amm.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/pryzm-finance/pryzm-core/x/amm/types/v1";

message Order {
  uint64 id = 1;
  string creator = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 pool_id = 3;
  string token_in = 4;
  string token_out = 5;
  bool whitelisted_route = 6;
  bool allow_matching = 7;
  string amount_per_step = 8 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string remaining_amount = 9 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string deposited_amount = 10 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  int64 min_millis_interval = 11;
  string max_step_spot_price = 12 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string max_matching_spot_price = 13 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = true
  ];
}

message DisabledOrderPair {
  bool whitelisted_route = 1;
  uint64 pool_id = 2;
  string token_in = 3;
  string token_out = 4;
}
